+toolbar +change theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
+<mat-toolbar color="primary">
+
+    <span>{{ title }}</span>
+  
+</mat-toolbar>
+
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" class="main-container">
-    <h4 color="primary">
-        Welcome to {{ title }}!
-      </h4>
+
 
   <app-login></app-login>
  
