--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,9 +19,9 @@
         <input matInput placeholder="Password" type="password">
       </mat-form-field>
       <br><br>
-      <button mat-raised-button color="primary" class="example-25-width">Login</button>
+      <button mat-raised-button color="primary" class="mbtns">Login</button>
 <br>
-      <button mat-raised-button color="primary" class="example-25-width">Register</button>
+      <button mat-raised-button color="primary" class="mbtns">Register</button>
     </mat-card-content>
   </mat-card>
 </div>
