--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" class="main-container">
+<div class="main-container">
 
 
   <app-login></app-login>
