--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,22 +1,31 @@
 /* $orignal_primum_color = #673ab7; */
 
-.main-container{
-    margin: auto;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+.main-container {
+	width: 100%;
+	height: 50%;
+	
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+  	
+	margin: auto;
+
+
 }
-.logo-img{
-    width: 150px;
-    height: 80px;
-    margin-bottom: 64px;
+.logo-img {
+  width: 152px;
+  height: 80px;
+  margin-bottom: 64px;
 }
 
 .example-50-width {
-  width: 50%;
+  width: 60%;
+  margin-right: 20%;
+  margin-left: 20%;
 }
 .mbtns {
   margin-top: 24px;
-  width: 50%
+  width: 25%;
 }
